Fixed wrapping set in PostList

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,12 +1,7 @@
 .card {
   margin-bottom: 30px;
 }
-ul.post-tags {
+.post-tags {
   padding: 0;
-  display: inline-flex;
-  list-style: none;
-
-  li {
-    margin-right: 10px;
-  }
+  display: inline;
 }
